--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         <!--navigation-->
         <nav class="navigation">
           <a class="logo" href="index.html"
-            ><span class="logo-accent">Web</span>Studio</a
+            ><span class="logo-accent">Web</span>Студія</a
           >
           <button
             class="header-button"
@@ -35,7 +35,7 @@
             <svg
               height="40px"
               width="40px"
-              aria-label="переключатель мобильного меню"
+              aria-label="перемикач мобільного меню"
             >
               <use class="icon-menu" href="./images/sprite.svg#burger"></use>
               <use
@@ -47,17 +47,17 @@
           <div class="menu-container" id="menu-container" data-menu>
             <ul class="navigation-menu list">
               <li class="navigation-menu-item">
-                <a class="navigation-menu-link" href="./index.html">Студия</a>
+                <a class="navigation-menu-link" href="./index.html">Студія</a>
               </li>
               <li class="navigation-menu-item">
                 <a
                   class="navigation-menu-link is-current"
                   href="./portfolio.html"
-                  >Портфолио</a
+                  >Портфоліо</a
                 >
               </li>
               <li class="navigation-menu-item">
-                <a class="navigation-menu-link" href="#">Контакты</a>
+                <a class="navigation-menu-link" href="#">Контакти</a>
               </li>
             </ul>
 
@@ -85,19 +85,19 @@
     <main>
       <section class="section-portfolio">
         <div class="container">
-          <h1 class="visually-hidden" hidden>портфолио</h1>
+          <h1 class="visually-hidden" hidden>портфоліо</h1>
           <ul class="button-list list">
             <li class="modal-button">
-              <button class="modal-button-portfolio" type="button">Все</button>
+              <button class="modal-button-portfolio" type="button">Всі</button>
             </li>
             <li class="modal-button">
               <button class="modal-button-portfolio" type="button">
-                Веб-сайты
+                Веб-сайти
               </button>
             </li>
             <li class="modal-button">
               <button class="modal-button-portfolio" type="button">
-                Приложения
+                Додатки
               </button>
             </li>
             <li class="modal-button">
@@ -142,14 +142,12 @@
                     <img
                       class="work-examples-images"
                       src="./images/portfolio/img11.jpg"
-                      alt="ноутбук"
+                      alt="нотбук"
                     />
                   </picture>
 
                   <p class="overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк - це сучасна платформа поширення коронавірусу. Компанії використовують цю платформу для цифрового шпигунства та атак на захищені сервери конкурентів.
                   </p>
                 </div>
                 <div class="work-examples-content">
@@ -187,9 +185,7 @@
                   /></picture>
 
                   <p class="overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк - це сучасна платформа поширення коронавірусу. Компанії використовують цю платформу для цифрового шпигунства та атак на захищені сервери конкурентів.
                   </p>
                 </div>
                 <div class="work-examples-content">
@@ -229,14 +225,12 @@
                   /></picture>
 
                   <p class="overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк - це сучасна платформа поширення коронавірусу. Компанії використовують цю платформу для цифрового шпигунства та атак на захищені сервери конкурентів.
                   </p>
                 </div>
                 <div class="work-examples-content">
                   <h2 class="work-examples-title">Ресторан Seafood</h2>
-                  <p class="work-examples-text">Приложение</p>
+                  <p class="work-examples-text">Додаток</p>
                 </div>
               </a>
             </li>
@@ -265,13 +259,11 @@
                     <img
                       class="work-examples-images"
                       src="./images/portfolio/exm4.jpg"
-                      alt="наушники"
+                      alt="навушники"
                   /></picture>
 
                   <p class="overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк - це сучасна платформа поширення коронавірусу. Компанії використовують цю платформу для цифрового шпигунства та атак на захищені сервери конкурентів.
                   </p>
                 </div>
                 <div class="work-examples-content">
@@ -309,14 +301,12 @@
                   /></picture>
 
                   <p class="overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк - це сучасна платформа поширення коронавірусу. Компанії використовують цю платформу для цифрового шпигунства та атак на захищені сервери конкурентів.
                   </p>
                 </div>
                 <div class="work-examples-content">
                   <h2 class="work-examples-title">Проект Boxes</h2>
-                  <p class="work-examples-text">Приложение</p>
+                  <p class="work-examples-text">Додаток</p>
                 </div>
               </a>
             </li>
@@ -345,13 +335,11 @@
                     <img
                       class="work-examples-images"
                       src="./images/portfolio/exm6.jpg"
-                      alt="монитор компютера"
+                      alt="монітор комп'ютера"
                   /></picture>
 
                   <p class="overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк - це сучасна платформа поширення коронавірусу. Компанії використовують цю платформу для цифрового шпигунства та атак на захищені сервери конкурентів.
                   </p>
                 </div>
                 <div class="work-examples-content">
@@ -395,119 +383,115 @@
                   </picture>
 
                   <p class="overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк - це сучасна платформа поширення коронавірусу. Компанії використовують цю платформу для цифрового шпигунства та атак на захищені сервери конкурентів.
                   </p>
                 </div>
                 <div class="work-examples-content">
-                  <h2 class="work-examples-title">Издание Limited Edition</h2>
+                  <h2 class="work-examples-title">Журнал "Creative"</h2>
                   <p class="work-examples-text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="work-examples-item">
-              <a class="portfolio-photo-link link" href="">
-                <div class="work-item-img-wrapper">
-                  <picture>
-                    <source
-                      media="(max-width:767 )"
-                      srcset="
-                        ./images/portfolio/img88-1х.jpg 1x,
-                        ./images/portfolio/img88-2х.jpg 2x
-                      "
-                    />
-                    <source
-                      media="(min-width:1200px )"
-                      srcset="
-                        ./images/portfolio/img88.jpg     1x,
-                        ./images/portfolio/img88-d2x.jpg 2x
-                      "
-                    />
-                    <source
-                      media="(min-width:768 )"
-                      srcset="
-                        ./images/portfolio/img88-t1x.jpg 1x,
-                        ./images/portfolio/img88-t2x.jpg 2x
-                      "
-                    />
-                    <img
-                      class="work-examples-images"
-                      src="./images/portfolio/exm8.jpg"
-                      alt="марка"
-                    />
-                  </picture>
+                   <li class="work-examples-item">
+          <a class="portfolio-photo-link link" href="">
+            <div class="work-item-img-wrapper">
+              <picture>
+                <source
+                  media="(max-width:767 )"
+                  srcset="
+                    ./images/portfolio/img88-1х.jpg 1x,
+                    ./images/portfolio/img88-2х.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:1200px )"
+                  srcset="
+                    ./images/portfolio/img88.jpg     1x,
+                    ./images/portfolio/img88-d2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:768 )"
+                  srcset="
+                    ./images/portfolio/img88-t1x.jpg 1x,
+                    ./images/portfolio/img88-t2x.jpg 2x
+                  "
+                />
+                <img
+                  class="work-examples-images"
+                  src="./images/portfolio/exm8.jpg"
+                  alt="марка"
+                />
+              </picture>
 
-                  <p class="overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </div>
-                <div class="work-examples-content">
-                  <h2 class="work-examples-title">Проект LAB</h2>
-                  <p class="work-examples-text">Маркетинг</p>
-                </div>
-              </a>
-            </li>
-            <li class="work-examples-item">
-              <a class="portfolio-photo-link link" href="">
-                <div class="work-item-img-wrapper">
-                  <picture>
-                    <source
-                      media="(max-width:767 )"
-                      srcset="
-                        ./images/portfolio/img99-1х.jpg 1x,
-                        ./images/portfolio/img99-2х.jpg 2x
-                      "
-                    />
-                    <source
-                      media="(min-width:1200px )"
-                      srcset="
-                        ./images/portfolio/img99.jpg     1x,
-                        ./images/portfolio/img99-d2x.jpg 2x
-                      "
-                    />
-                    <source
-                      media="(min-width:768 )"
-                      srcset="
-                        ./images/portfolio/img99-t1x.jpg 1x,
-                        ./images/portfolio/img99-t2x.jpg 2x
-                      "
-                    />
-                    <img
-                      class="work-examples-images"
-                      src="./images/portfolio/exm9.jpg"
-                      alt="нетбук"
-                    />
-                  </picture>
+              <p class="overlay">
+                Технокряк - це сучасна платформа поширення коронавірусу. Компанії використовують цю платформу для цифрового шпигунства та атак на захищені сервери конкурентів.
+              </p>
+            </div>
+            <div class="work-examples-content">
+              <h2 class="work-examples-title">Проект LAB</h2>
+              <p class="work-examples-text">Маркетинг</p>
+            </div>
+          </a>
+        </li>
+        <li class="work-examples-item">
+          <a class="portfolio-photo-link link" href="">
+            <div class="work-item-img-wrapper">
+              <picture>
+                <source
+                  media="(max-width:767 )"
+                  srcset="
+                    ./images/portfolio/img99-1х.jpg 1x,
+                    ./images/portfolio/img99-2х.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:1200px )"
+                  srcset="
+                    ./images/portfolio/img99.jpg     1x,
+                    ./images/portfolio/img99-d2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:768 )"
+                  srcset="
+                    ./images/portfolio/img99-t1x.jpg 1x,
+                    ./images/portfolio/img99-t2x.jpg 2x
+                  "
+                />
+                <img
+                  class="work-examples-images"
+                  src="./images/portfolio/exm9.jpg"
+                  alt="нетбук"
+                />
+              </picture>
 
-                  <p class="overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </div>
-                <div class="work-examples-content">
-                  <h2 class="work-examples-title">Growing Business</h2>
-                  <p class="work-examples-text">Приложение</p>
-                </div>
-              </a>
-            </li>
+              <p class="overlay">
+                Технокряк - це сучасна платформа поширення коронавірусу. Компанії використовують цю платформу для цифрового шпигунства та атак на захищені сервери конкурентів.
+              </p>
+            </div>
+            <div class="work-examples-content">
+              <h2 class="work-examples-title">Growing Business</h2>
+              <p class="work-examples-text">Додаток</p>
+            </div>
+          </a>
+        </li>
           </ul>
         </div>
       </section>
     </main>
+     
     <!--foot-->
-    <footer class="footer">
+ 
+<footer class="footer">
       <div class="container">
         <div class="footer-flex-container">
           <div class="footer-address-container">
             <a class="logo-footer link" href="#"
-              ><span class="logo-accent">Web</span>Studio
+              ><span class="logo-accent">Web</span>Студія
             </a>
             <address class="footer-contact">
-              <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+              <p class="footer-address">м. Київ, пр-т Лесі Українки, 26</p>
               <ul class="fotter-list list">
                 <li class="footer-contact-address">
                   <a
@@ -525,7 +509,7 @@
             </address>
           </div>
           <div class="footer-container-slogan">
-            <p class="footer-slogan">присоединяйтесь</p>
+            <p class="footer-slogan">приєднуйтесь</p>
             <ul class="footer-social-list list">
               <li class="footer-social-list-item">
                 <a class="footer-social-link" href="">
@@ -559,18 +543,18 @@
           </div>
         </div>
         <div class="footer-group">
-          <p class="footer-slogan">Подпишитесь на рассылку</p>
+          <p class="footer-slogan">Підпишіться на розсилку</p>
           <form class="footer-form">
             <p class="form-subscribe">
               <label for="email"></label>
               <input
                 class="footer-form-input"
                 type="email"
-                placeholder="E-mail"
+                placeholder="Електронна пошта"
               />
             </p>
             <button class="button-subscribe" type="submit">
-              <span class="subscribe-text">Подписаться</span>
+              <span class="subscribe-text">Підписатися</span>
               <svg width="24" height="24">
                 <use href="./images/sprite.svg#send"></use>
               </svg>
